K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
      - name: book-service
        image: diarrabousso/book-service
        imagePullPolicy: Always
        ports:
        - containerPort: 2600
