K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  type: NodePort
  selector:
    app: book-service
  ports:
    - protocol: TCP
      port: 2600
      targetPort: 2600
      nodePort: 30007
