K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress-books
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/books/$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /books/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: book-service
            port:
              number: 2600
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress-users
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /users/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 2700
